@@ -24,6 +24,7 @@ import java.net.InetSocketAddress;
 import java.security.PrivilegedExceptionAction;
 import java.util.Enumeration;
 import java.util.List;
+
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -32,6 +33,7 @@ import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSInputStream;
 import org.apache.hadoop.hdfs.DFSClient;
+import org.apache.hadoop.hdfs.DFSInputStream;
 import org.apache.hadoop.hdfs.server.common.JspHelper;
 import org.apache.hadoop.hdfs.server.datanode.DataNode;
 import org.apache.hadoop.security.UserGroupInformation;
@@ -41,6 +43,8 @@ import org.mortbay.jetty.InclusiveByteRange;
 public class StreamFile extends DfsServlet {
   /** for java.io.Serializable */
   private static final long serialVersionUID = 1L;
+
+  public static final String CONTENT_LENGTH = "Content-Length";
 
   static InetSocketAddress nameNodeAddr;
   static DataNode datanode = null;
@@ -79,7 +83,7 @@ public class StreamFile extends DfsServlet {
       return;
     }
     
-    Enumeration reqRanges = request.getHeaders("Range");
+    Enumeration<?> reqRanges = request.getHeaders("Range");
     if (reqRanges != null && !reqRanges.hasMoreElements())
       reqRanges = null;
 
@@ -91,13 +95,13 @@ public class StreamFile extends DfsServlet {
       return;
     }
     
-    long fileLen = dfs.getFileInfo(filename).getLen();
-    FSInputStream in = dfs.open(filename);
+    final DFSInputStream in = dfs.open(filename);
+    final long fileLen = in.getFileLength();
     OutputStream os = response.getOutputStream();
 
     try {
       if (reqRanges != null) {
-        List ranges = InclusiveByteRange.satisfiableRanges(reqRanges,
+        List<?> ranges = InclusiveByteRange.satisfiableRanges(reqRanges,
                                                            fileLen);
         StreamFile.sendPartialData(in, os, response, fileLen, ranges);
       } else {
@@ -105,12 +109,21 @@ public class StreamFile extends DfsServlet {
         response.setHeader("Content-Disposition", "attachment; filename=\"" + 
                            filename + "\"");
         response.setContentType("application/octet-stream");
+        response.setHeader(CONTENT_LENGTH, "" + fileLen);
         StreamFile.writeTo(in, os, 0L, fileLen);
       }
+    } catch(IOException e) {
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("response.isCommitted()=" + response.isCommitted(), e);
+      }
+      throw e;
     } finally {
-      in.close();
-      os.close();
-      dfs.close();
+      try {
+        in.close();
+        os.close();
+      } finally {
+        dfs.close();
+      }
     }      
   }
   
@@ -118,7 +131,7 @@ public class StreamFile extends DfsServlet {
                               OutputStream os,
                               HttpServletResponse response,
                               long contentLength,
-                              List ranges)
+                              List<?> ranges)
   throws IOException {
 
     if (ranges == null || ranges.size() != 1) {
